RESOLVED FIXED140336
REGRESSION(r178029): [GTK][EFL] Caused no-backing-for-clip-overlap test failures
https://bugs.webkit.org/show_bug.cgi?id=140336
Summary REGRESSION(r178029): [GTK][EFL] Caused no-backing-for-clip-overlap test failures
Byungseon(Sun) Shin
Reported 2015-01-10 05:43:36 PST
Revision r178176: <http://trac.webkit.org/changeset/178176> caused no-backing-for-clip-overlap test failures on GTK Platform. The following test is failing on platform GTK: compositing/backing/no-backing-for-clip-overlap.html
Attachments
Patch (2.84 KB, patch)
2015-01-10 06:01 PST, Byungseon(Sun) Shin
no flags
Error Capture after r178029 (8.40 KB, image/png)
2015-01-10 06:09 PST, Byungseon(Sun) Shin
no flags
Expected Result (8.51 KB, image/png)
2015-01-10 06:10 PST, Byungseon(Sun) Shin
no flags
Patch (2.85 KB, patch)
2015-01-11 04:40 PST, Byungseon(Sun) Shin
no flags
Patch (2.89 KB, patch)
2015-01-12 15:51 PST, Byungseon(Sun) Shin
no flags
Byungseon(Sun) Shin
Comment 1 2015-01-10 06:01:54 PST
Byungseon(Sun) Shin
Comment 2 2015-01-10 06:09:13 PST
Created attachment 244409 [details] Error Capture after r178029
Byungseon(Sun) Shin
Comment 3 2015-01-10 06:10:49 PST
Created attachment 244410 [details] Expected Result
Gyuyoung Kim
Comment 4 2015-01-10 23:01:38 PST
Comment on attachment 244408 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244408&action=review > Source/WebCore/ChangeLog:3 > + [GTK] Fix regression introduced in r178029 It seems this patch is not only for [GTK] port.
Gyuyoung Kim
Comment 5 2015-01-10 23:05:03 PST
Comment on attachment 244408 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244408&action=review >> Source/WebCore/ChangeLog:3 >> + [GTK] Fix regression introduced in r178029 > > It seems this patch is not only for [GTK] port. Besides this title differs from Bugzilla title. REGRESSION(r178029): [GTK] Caused no-backing-for-clip-overlap test failures
Byungseon(Sun) Shin
Comment 6 2015-01-11 04:40:56 PST
Byungseon(Sun) Shin
Comment 7 2015-01-11 04:42:49 PST
Comment on attachment 244408 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244408&action=review >>> Source/WebCore/ChangeLog:3 >>> + [GTK] Fix regression introduced in r178029 >> >> It seems this patch is not only for [GTK] port. > > Besides this title differs from Bugzilla title. > > REGRESSION(r178029): [GTK] Caused no-backing-for-clip-overlap test failures Thanks for the review. I have updated ChangeLog.
Simon Fraser (smfr)
Comment 8 2015-01-12 15:38:12 PST
Comment on attachment 244422 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244422&action=review > Source/WebCore/ChangeLog:8 > + Creating childClippingMaskLayer when renderer has border radius or clip path. Avoid creating...?
Byungseon(Sun) Shin
Comment 9 2015-01-12 15:51:15 PST
WebKit Commit Bot
Comment 10 2015-01-12 16:35:25 PST
Comment on attachment 244474 [details] Patch Clearing flags on attachment: 244474 Committed r178308: <http://trac.webkit.org/changeset/178308>
WebKit Commit Bot
Comment 11 2015-01-12 16:35:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.