REGRESSION(r178029): [GTK][EFL] Caused no-backing-for-clip-overlap test failures https://bugs.webkit.org/show_bug.cgi?id=140336

Patch by Byungseon Shin <sun.shin@lge.com> on 2015-01-12
Reviewed by Simon Fraser.

Avoid creating childClippingMaskLayer when renderer has not border radius nor clip path.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateChildClippingStrategy):

Canonical link: https://commits.webkit.org/158359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178308 268f45cc-cd09-0410-ab3c-d52691b4dbfc